# completely-understood-vol61

./:  firebase.json  .dockerignore  .firebaserc  .gitignore  .prettierignore  CLOUD_RUN_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT.md  DOCKER_COMPOSE_README.md  Dockerfile  README.md  cloud.run.deploy.sh  completely-understood-vol67.memo.md  cors-env.yaml  docker-backend.sh  docker-compose.yml  docker.down.sh  firebase-deployment-guide.md  firebase.history.md  firebase.json  firebase.setup.memo.md  migrations.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  serve.sh  test-local.sh
.cursor/: mcp.json
.cursor/rules/: nx-rules.mdc
.firebase/: hosting.ZGlzdC9hcHBzL2Zyb250ZW5kL2Jyb3dzZXI.cache
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  launch-backend-deploy.yml
apps/backend/: .dockerignore  Cargo.toml  Dockerfile  cloud-run.yaml  env.example  index.js  package-lock.json  package.json  project.json
apps/backend/src/: main.rs
apps/frontend/: eslint.config.cjs  project.json
apps/frontend-e2e/: cypress.config.ts
apps/frontend/src/: index.html
apps/frontend/src/app/: app.component.spec.ts  app.component.ts  nx-welcome.component.ts
apps/frontend/src/assets/: env.js
apps/frontend/src/environments/: environment.prod.ts  environment.ts
functions/: package-lock.json  package.json  pnpm-lock.yaml  project.json  tsconfig.json
functions/src/: index.ts
scripts/: deploy-backend.sh  deploy-full.sh
